implemented BackProp, ugly and probably won't work